make sure verified icon is shown everywhere (#3501)
* fix truncation so verified icon is always shown
on ViewGroup and on ViewProfile

* always show verified icon in chatlist items

* fix trucation on contact list items

* fix truncation in navbar

* fix centering of verified icon

* improve spaceing in chatlistitems
also trucate name in chatname in message search results

* more spacing

* center avatars

* css fixes

remove wrong scrollbars in navbar header
fix spacing of name in view profile

--- a/scss/chat/_chat-list-item.scss
+++ b/scss/chat/_chat-list-item.scss
@@ -38,6 +38,16 @@
         font-size: medium;
         & > span {
           user-select: none;
+          display: inline-flex;
+          max-width: 100%;
+          .truncated {
+            text-overflow: ellipsis;
+            overflow: hidden;
+          }
+          .verified-icon {
+            margin-inline-start: 0.3em;
+            margin-inline-end: 0.1em;
+          }
         }
       }
 
